--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.5.10",
     "@types/passport-jwt": "^3.0.3",
+    "dotenv": "^8.2.0",
     "jwks-rsa": "^1.8.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
